# IMAC-ImacWars

./: .gitattributes  .gitignore  Application.cpp  CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  Makefile  Map.cpp  MapH.txt  Model.cpp  Model.h  Player.cpp  Player.h  RAPPORT.md  README.md  Tile.cpp  Tile.h  Unit.cpp  Unit.h  Util.cpp  Util.h  View.cpp  View.h  buildAndRun.sh  clean.sh  exceptions.cpp  main.cpp  notes.txt
Tests/: UnitTest.cpp
binBackup/: IMAC-ImacWars1  IMAC-ImacWars2  imacwars
debug/: makefile
debug/src/: subdir.mk
includes/: AI.hpp  Artillery.hpp  Astar.hpp  Bee.hpp  Color.hpp  Controller.hpp  Duck.hpp  Entity.hpp  FX.hpp  Game.hpp  Hippo.hpp  Infantry.hpp  Land.hpp  LandType.hpp  MVector.hpp  Map.hpp  Model.hpp  Player.hpp  Rhino.hpp  Tank.hpp  TexManager.hpp  Texture.hpp  TextureManager.hpp  Tile.hpp  Unit.hpp  Vector2d.hpp  Vector2f.hpp  Vector2i.hpp  View.hpp  _Entity
src/: AI.cpp  Artillery.cpp  Astar.cpp  Bee.cpp  Color.cpp  Controller.cpp  Controller.h  Controller.hpp  Duck.cpp  Entity.cpp  Exceptions.cpp  Game.cpp  Game.hpp  Hippo.cpp  Infantry.cpp  MVector.cpp  Main.cpp  Map.cpp  Model.cpp  Model.h  Model.hpp  Player.cpp  Player.h  Player.hpp  Rhino.cpp  Tank.cpp  TexManager.cpp  Texture.cpp  TextureManager.cpp  Tile.cpp  Tile.h  Tile.hpp  Unit.cpp  Unit.h  Unit.hpp  Util.cpp  Util.h  Vector2d.cpp  Vector2f.cpp  Vector2i.cpp  (+4 more)
test/: AllTests.cpp  ColorTest.cpp
